FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <inlineHelpText>Standard Industrial Classification are typically 2-4 numerical digit codes that categorize the industries that companies belong to based on their business activities</inlineHelpText>
    <label>SIC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>