FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The Application status from Passfort.</description>
    <inlineHelpText>Application applied (submitted but not reviewed for KYC), In Review (KYC in process of reviewing), Approved, Rejected (account declined prior to accepting application), Cancelled (Account Services discontinued after application was initally reviewed)</inlineHelpText>
    <label>Application Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>