FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Tax_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_Number__c</fullName>
    <inlineHelpText>Number issued by IRS, Social Security Administration, or other Customs (VAT) authority</inlineHelpText>
    <label>Tax ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>