FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Total_Value_Payments_Past_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_Payments_Past_12_Months__c</fullName>
    <inlineHelpText>Annual sum of payments business entity made in the past 12 months</inlineHelpText>
    <label>Total Value Payments Past 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>