FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>Trading_Name__c</fullName>
    <inlineHelpText>Pseudonym used by companies that do not operate under their registered company name</inlineHelpText>
    <label>Trading Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>