FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Typical_Payment_Size__c.field-meta.xml
<CustomField>
    <fullName>Typical_Payment_Size__c</fullName>
    <inlineHelpText>Most common payment size business entity processes</inlineHelpText>
    <label>Typical Payment Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>