FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Verified_Bank_Details__c.field-meta.xml
<CustomField>
    <fullName>Verified_Bank_Details__c</fullName>
    <inlineHelpText>KYC Analyst reviewed recent bank document from applicant to verify bank account legitimacy</inlineHelpText>
    <label>Verified Bank Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>