FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <inlineHelpText>Education, Healthcare, B2B, Travel</inlineHelpText>
    <label>Vertical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>