FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <inlineHelpText>Webpage address for business entity</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>