FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Website_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Website_Reviewed__c</fullName>
    <inlineHelpText>KYC analyst has conducted WhoIs and visual inspection of entity website for red flags</inlineHelpText>
    <label>Website Reviewed</label>
    <length>22</length>
    <type>Text</type>
</CustomField>