FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/Will_Process_Credit_Card_Payments__c.field-meta.xml
<CustomField>
    <fullName>Will_Process_Credit_Card_Payments__c</fullName>
    <label>Will Process Credit Card Payments</label>
    <length>22</length>
    <type>Text</type>
</CustomField>