FLY wire David/force-app/main/default/objects/KYC_Application__c/fields/X2nd_Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Trading_Name__c</fullName>
    <inlineHelpText>secondary pseudonym used by companies that do not operate under their registered company name</inlineHelpText>
    <label>2nd Trading Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>