FLY wire David/force-app/main/default/objects/KYC_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Flag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>